objects/Desk_Guide_PDF__c.object
<CustomObject>
    <description>Compliance Requirement 
Depot for all TFS Desk Guides in PDF form</description>
    <fields>
        <fullName>ArchivedDate__c</fullName>
        <label>Archived Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeskGuidePack__c</fullName>
        <label>Desk Guide Pack</label>
        <referenceTo>Desk_Guide_Pack__c</referenceTo>
        <relationshipLabel>Desk Guide PDFs</relationshipLabel>
        <relationshipName>Desk_Guide_PDFs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PublishedDate__c</fullName>
        <label>Published Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TitleSort__c</fullName>
        <label>TitleSort</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Desk Guide PDF</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PublishedDate__c</columns>
        <columns>ArchivedDate__c</columns>
        <columns>DeskGuidePack__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Desk Guide PDF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desk Guide PDFs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>